--- a/package.json
+++ b/package.json
@@ -1,48 +1,31 @@
 {
   "name": "slick-fast",
-  "version": "1.8.1",
+  "version": "1.0.1",
   "description": "the last carousel you'll ever need",
-  "main": "slick/slick.js",
+  "main": "src/slick.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/kenwheeler/slick.git"
+    "url": "https://github.com/fastcoteam/slick.git"
   },
   "keywords": [
     "carousel",
     "slick",
     "responsive",
     "js",
-    "slider"
+    "slider",
+    "fast"
   ],
-  "author": "Ken Wheeler <ken_wheeler@me.com>",
+  "author": "Nguyen van hau <nguyenvanhaudev@gmail.com>",
   "contributors": [
     {
-      "name": "ken wheeler",
-      "email": "ken_wheeler@me.com",
-      "url": "http://kenwheeler.github.io/"
-    },
-    {
-      "name": "simon goellner",
-      "email": "simey.me@gmail.com",
-      "url": "http://simey.me"
-    },
-    {
-      "name": "ahmad el-alfy",
-      "email": "ahmadalfy@gmail.com",
-      "url": "http://www.alfy.me"
-    },
-    {
-      "name": "leggomuhgreggo",
-      "email": "gwestneat@gmail.com"
-    },
-    {
-      "name": "ashley mcknight",
-      "email": "ash@sharpteef.net"
+      "name": "Fastco Team",
+      "email": "nguyenvanhaudev@gmail.com",
+      "url": "http://fastcoteam.github.io/"
     }
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/kenwheeler/slick/issues"
+    "url": "https://github.com/fastcoteam/slick/issues"
   },
   "peerDependencies": {
     "jquery": ">=1.8.0"
