--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "slick-fast",
+  "name": "@fastco/slick",
   "version": "1.0.1",
   "description": "the last carousel you'll ever need",
   "main": "src/slick.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/fastcoteam/slick.git"
+    "url": "git+https://github.com/fastcoteam/slick.git"
   },
   "keywords": [
     "carousel",
@@ -17,11 +17,7 @@
   ],
   "author": "Nguyen van hau <nguyenvanhaudev@gmail.com>",
   "contributors": [
-    {
-      "name": "Fastco Team",
-      "email": "nguyenvanhaudev@gmail.com",
-      "url": "http://fastcoteam.github.io/"
-    }
+    "Fastco Team <nguyenvanhaudev@gmail.com> (http://fastcoteam.github.io/)"
   ],
   "license": "MIT",
   "bugs": {
@@ -29,5 +25,9 @@
   },
   "peerDependencies": {
     "jquery": ">=1.8.0"
+  },
+  "homepage": "https://github.com/fastcoteam/slick#readme",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
